[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/attacks/katanaAttack.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 8 )

[node name="katanaAttack" type="Area2D"]
script = ExtResource( 1 )

[node name="twnAttack" type="Tween" parent="."]

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 120, 0 )
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_katanaAttack_body_entered"]
[connection signal="tween_completed" from="twnAttack" to="." method="_on_twnAttack_tween_completed"]
